src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail25.jova
class Test{
    public int x;

    private String msg;
    private int course_number;

    public int method() {
        int x;
        return 0;
    }
}

